# Exchange

./: .gitignore  README.md
backend/: example-env.txt  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0bb8335886b1_initial_migration.py  15632b10d652_update_user.py  718c4492894f_upgrade.py  9a1816f60667_adding_email_column.py  a59369522ca4_fix_bugs.py  b2b3b74c866f_upgrade_db.py  b94b9993fbb5_fix_v5.py  c8cbe72b8d38_fix_bugs_again.py  d518f9778c9c_fix_bugs_v2.py  f074be30ff6a_upgrade_db_2.py
backend/src/: __init__.py  config.py
backend/src/api/: api.py
backend/src/api/keys/: private_key.pem
backend/src/api/responses/: account_response.py  alert_response.py  auth_response.py  crypto_response.py  currency_response.py  response.py  spam_response.py  subscribe_responses.py
backend/src/api/routers/: account.py  alert.py  auth.py  crypto.py  currency.py  subscribe.py
backend/src/api/schemas/: account_schema.py  auth_schema.py
backend/src/bot/: bot.py
backend/src/databases/: engine.py  redis_client.py
backend/src/http_client/: api_client.py  binance.py  currencyfreaks.py  exhangerate.py  frankfurter.py  http_client.py
backend/src/keys/: public_key.pem
backend/src/logger/: logger.py
backend/src/responses/: auth_response.py  crypto_response.py  exchange_response.py  response.py
backend/src/routers/: auth.py  crypto.py  exchange.py
backend/src/scheduler/: scheduler.py
backend/src/schemas/: auth_schema.py
backend/src/utils/: crypto_symbols.py  currency_symbols.py  email.py  jwt.py  oauth.py  utils.py
(+71 files in other folders)
