[project]
name = "exchange-api-v1"
version = "0.1.0"
description = ""
authors = [
    {name = "MONSTER",email = "vladyarik88888@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pydantic-async-validation (>=0.3.0,<0.4.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "authlib (>=1.5.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "phonenumbers (>=9.0.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
